--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,11 @@ services:
   db:
     image: postgres:latest
     env_file:
-      - ./.env
+      - .env
     ports:
       - "5432:5432"
-#    volumes:
-#      - ./data/db:/var/lib/postgresql/data
+    volumes:
+      - ./data/db:/var/lib/postgresql/data
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready" ]
       interval: 10s
@@ -21,9 +21,11 @@ services:
       context: .
       dockerfile: ./docker/Dockerfile
     env_file:
-      - ./.env
+      - .env
     ports:
       - "8000:8000"
     depends_on:
       db:
         condition: service_healthy
+    links:
+      - db
